# summarize-reports

./: README.md  packages.txt  pyproject.toml  report.md  requirements.txt
src/AIxSummary/: crew.py  main.py
src/AIxSummary/config/: agents.yaml  tasks.yaml
src/aixnda/: crew.py  main.py
src/aixnda/config/: agents.yaml  tasks.yaml
